@@ -1,7 +1,8 @@
 package hamt_go
 
 import (
-	. "launchpad.net/gocheck"
+	// . "launchpad.net/gocheck"
+	. "gopkg.in/check.v1"
 	"testing"
 )
 
