@@ -6,7 +6,8 @@ import (
 	"bytes"
 	"fmt"
 	xr "github.com/jddixon/xlattice_go/rnglib"
-	. "launchpad.net/gocheck"
+	. "gopkg.in/check.v1"
+	//. "launchpad.net/gocheck"
 	// "sync/atomic"
 	//"unsafe"
 )
