@@ -5,7 +5,8 @@ package hamt_go
 import (
 	"fmt"
 	xr "github.com/jddixon/xlattice_go/rnglib"
-	. "launchpad.net/gocheck"
+	. "gopkg.in/check.v1"
+	//. "launchpad.net/gocheck"
 )
 
 var _ = fmt.Print
