@@ -6,7 +6,8 @@ import (
 	"code.google.com/p/intmath/intgr"
 	"fmt"
 	xr "github.com/jddixon/xlattice_go/rnglib"
-	. "launchpad.net/gocheck"
+	. "gopkg.in/check.v1"
+	//. "launchpad.net/gocheck"
 )
 
 var _ = fmt.Print
